kubernetes/services/aria2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: aria2
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: rpc
      port: 6800
  selector:
    app: aria2

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria2
  namespace: default
spec:
  tls:
    - hosts:
        - aria2.${DOMAIN_NAME}
      secretName: wilcard-main-domain-tls
  rules:
    - host: aria2.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aria2
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aria2
  namespace: default
  labels:
    app: aria2
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aria2
  template:
    metadata:
      labels:
        app: aria2
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: vpn
          image: qmcgaw/gluetun
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
        - name: app
          image: wahyd4/aria2-ui
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 80
            - name: rpc
              containerPort: 6800
          volumeMounts:
            - name: config
              mountPath: /app/conf
            - name: downloads
              mountPath: /data
      volumes:
        - name: config
          hostPath:
            path: /storage/aria2/config
        - name: downloads
          hostPath:
            path: /storage/aria2/downloads
